# velodent

./: .env.example  .gitignore  .taurignore  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: index.html  privacy.html
public/: manifest.webmanifest  sw.js
scripts/: free-dev-port.cjs  free-tauri-dev-exe.cjs  ocr-local-check.cjs
src/: App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/data/: velodent.sqlite  velodent.sqlite-shm  velodent.sqlite-wal
src-tauri/icons/: icon.icns
src-tauri/src/: agenda.rs  audit.rs  auth.rs  backup.rs  billing.rs  clinical.rs  commands.rs  consents.rs  db.rs  dicom_meta.rs  files.rs  health.rs  integrations.rs  lib.rs  license.rs  main.rs  rx_acquisition.rs  server.rs  state.rs  ts_cns.rs  tunnel.rs
src-tauri/src/integrations/: google.rs  resend.rs  sumup.rs
src/frontend/agenda/: AgendaView.test.ts  AgendaView.tsx  agendaApi.ts
src/frontend/app-shell/: AppShell.tsx  CommandPalette.tsx
src/frontend/billing/: billingApi.ts
src/frontend/clinical/: ClinicalPanel.tsx  ClinicalWorkspace.tsx  clinicalApi.ts  serviceCategories.ts
src/frontend/consents/: consentsApi.ts
src/frontend/license/: LicenseActivationEasterEgg.tsx
src/frontend/mobile/: MobileAgenda.tsx  MobileApp.tsx  MobileClinical.tsx  MobileConsents.tsx  MobileDashboard.tsx  MobileOcrScanner.test.ts  MobileOcrScanner.tsx  MobilePairingGate.tsx  MobilePatientRegistration.tsx  MobilePatientSearch.tsx  MobileShell.tsx  MobileTsScanner.tsx  bridge.test.ts  bridge.ts  lanBridgeApi.test.ts  lanBridgeApi.ts
src/frontend/patients/: PatientModuleWorkspace.tsx  PatientsView.tsx  patientsApi.ts  taxCode.test.ts  taxCode.ts  tsCns.test.ts  tsCns.ts
src/frontend/settings/: SettingsPanel.tsx  authConfig.ts  settingsApi.ts
src/frontend/shared/api/: health.ts
src/frontend/shared/i18n/: L10nProvider.tsx  app_en.arb  app_it.arb  noHardcodedUiText.test.ts  translations.test.ts  translations.ts
src/frontend/shared/ui/: badge.tsx  button.tsx  input.tsx
src/frontend/tariffario/: TariffarioView.tsx
src/styles/: globals.css
