[package]
name = "velodent"
version = "0.1.0"
description = "VeloDent clinical management desktop application"
authors = ["VeloDent"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "velodent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
hex = "0.4.3"
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tauri = { version = "2.11.2", features = [] }
