[package]
name = "velodent"
version = "0.1.0"
description = "VeloDent clinical management desktop application"
authors = ["VeloDent"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "velodent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
dotenvy = "0.15.7"
dicom-object = "=0.8.2"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
opener = "=0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tauri = { version = "2.11.2", features = [] }
